Add basic value API
