# api/pack_api.py
@@ -1,3 +1,4 @@
+from sqlalchemy import and_
 from typing import List
 
 import werkzeug.exceptions
@@ -6,7 +7,7 @@ from flask_restful import Resource, Api, reqparse, marshal
 
 from api.common import make_id_response, make_empty_response
 from api.marshalling import pack_fields
-from db import make_session, Pack
+from db import make_session, Pack, Value
 
 pack_blueprint = Blueprint('pack_blueprint', __name__, url_prefix='/api')
 pack_api = Api(pack_blueprint)
@@ -47,7 +48,7 @@ class PackList(Resource):
     def post():
         parser = reqparse.RequestParser()
         parser.add_argument('name', required=True, trim=True)
-        args = parser.parse_args()
+        args = parser.parse_args(strict=True)
 
         pack = Pack(name=args['name'])
         with make_session() as session:
@@ -58,6 +59,67 @@ class PackList(Resource):
 
 # noinspection PyTypeChecker
 pack_api.add_resource(PackList, '/pack')
+
+
+class PackVariableResource(Resource):
+    @staticmethod
+    def post(pack_id, variable_id):
+        parser = reqparse.RequestParser()
+        parser.add_argument('environment_id', required=False, type=int, nullable=True, store_missing=False)
+        parser.add_argument('data', required=True)
+        args = parser.parse_args(strict=True)
+
+        with make_session() as session:
+            environment_id = args['environment_id'] if 'environment_id' in args else None
+            print(environment_id)
+            if environment_id is None:
+                value = session.query(Value).filter(
+                    and_(Value.variable_id == variable_id,
+                         Value.pack_id == pack_id)).first()
+            else:
+                value = session.query(Value).filter(
+                    and_(Value.variable_id == variable_id,
+                         Value.environment_id == environment_id,
+                         Value.pack_id == pack_id)).first()
+
+            if value is None:
+                value = Value(pack_id=pack_id, environment_id=environment_id, variable_id=variable_id,
+                              data=args['data'])
+                session.add(value)
+            else:
+                value.data = args['data']
+
+            session.commit()
+            return make_empty_response()
+
+    @staticmethod
+    def delete(pack_id, variable_id):
+        parser = reqparse.RequestParser()
+        parser.add_argument('environment_id', required=False, type=int, nullable=True)
+        args = parser.parse_args(strict=True)
+
+        with make_session() as session:
+            environment_id = args['environment_id']
+            if environment_id is None:
+                value = session.query(Value).filter(
+                    and_(Value.variable_id == variable_id,
+                         Value.pack_id == pack_id)).first()
+            else:
+                value = session.query(Value).filter(
+                    and_(Value.variable_id == variable_id,
+                         Value.environment_id == environment_id,
+                         Value.pack_id == pack_id)).first()
+
+            if value is None:
+                return {'error': "Requested variable does not exist in the specified pack"}, \
+                       werkzeug.exceptions.NotFound.code
+
+            session.delete(value)
+            return make_empty_response()
+
+
+# noinspection PyTypeChecker
+pack_api.add_resource(PackVariableResource, '/pack/<int:pack_id>/variable/<int:variable_id>')
 
 
 def get_pack_api_blueprint():
