# client-api/api.yml
@@ -222,6 +222,60 @@ paths:
           description: "successful operation"
           schema:
             type: "object"
+  /pack/{packId}/variable/{variableId}:
+    parameters:
+      - in: path
+        name: packId
+        required: true
+        type: integer
+        minimum: 0
+        description: "The pack ID."
+      - in: path
+        name: variableId
+        required: true
+        type: integer
+        minimum: 0
+        description: "The variable ID."
+    post:
+      tags:
+      - "packs"
+      summary: "Set a variable's value"
+      operationId: "setValue"
+      consumes:
+        - application/json
+      parameters:
+        - in: body
+          name: setVariableValue
+          description: Variable value.
+          schema:
+            $ref: "#/definitions/VariableValueUpdate"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "object"
+    delete:
+      tags:
+      - "packs"
+      summary: "Delete a variable's value"
+      operationId: "deleteValue"
+      consumes:
+        - application/json
+      parameters:
+        - in: body
+          name: setVariableValue
+          description: Variable value.
+          schema:
+            $ref: "#/definitions/DeleteVariableValue"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "object"
   /environment:
     get:
       tags:
@@ -465,3 +519,20 @@ definitions:
       data:
         type: "string"
         description: "Value data"
+  VariableValueUpdate:
+    type: "object"
+    required:
+      - data
+    properties:
+      environment_id:
+        type: "integer"
+        description: "Optional environment ID"
+      data:
+        type: "string"
+        description: "The variable's value"
+  DeleteVariableValue:
+    type: "object"
+    properties:
+      environment:
+        type: "integer"
+        description: "Optional environment ID"
